--- a/test_generate.ipynb
+++ b/test_generate.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "1e491e19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "6ad30c26",
    "metadata": {},
    "outputs": [],
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "6845a169",
    "metadata": {},
    "outputs": [],
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "02945c83",
    "metadata": {},
    "outputs": [
@@ -80,7 +89,7 @@
        ")"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,10 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "bfa1cf9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maximos/miniconda3/envs/torch/lib/python3.12/site-packages/music21/stream/base.py:3694: Music21DeprecationWarning: .flat is deprecated.  Call .flatten() instead\n",
+      "  return self.iter().getElementsByClass(classFilterList)\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "for batch in valloader:\n",
@@ -123,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "ebc093ff",
    "metadata": {},
    "outputs": [],
@@ -135,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "74bcc27f",
    "metadata": {},
    "outputs": [],
@@ -153,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "cdd0b369",
    "metadata": {},
    "outputs": [
@@ -204,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "id": "7e1f5079",
    "metadata": {},
    "outputs": [
@@ -240,7 +258,7 @@
        ")"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "6fc4a508",
    "metadata": {},
    "outputs": [],
@@ -287,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "2be0c830",
    "metadata": {},
    "outputs": [
@@ -338,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "e9b8c333",
    "metadata": {},
    "outputs": [
@@ -363,17 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "id": "797e6f56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoded = tokenizer.encode(data_files[0])"
+    "encoded = tokenizer.encode(data_files[90])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 92,
    "id": "dffcc448",
    "metadata": {},
    "outputs": [
@@ -391,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 93,
    "id": "52a3756c",
    "metadata": {},
    "outputs": [],
@@ -402,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "id": "cf7caa70",
    "metadata": {},
    "outputs": [],
@@ -420,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 95,
    "id": "30a895ca",
    "metadata": {},
    "outputs": [
@@ -429,7 +447,7 @@
      "output_type": "stream",
      "text": [
       "output_tokens\n",
-      "['G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'G:min', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', 'C#:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
+      "['B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'F#:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', 'B:maj', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>', '<pad>']\n",
       "harmony_gt_tokens\n",
       "['G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'C:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'G:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'D#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'A#:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'F:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj', 'D:maj']\n"
      ]
@@ -456,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from music21 import harmony, stream, metadata, chord\n",
+    "from music21 import harmony, stream, metadata, chord, meter\n",
     "import mir_eval\n",
     "import numpy as np\n",
     "from copy import deepcopy\n",
@@ -464,30 +482,83 @@
     "def overlay_generated_harmony(melody_part, generated_chords, ql_per_16th, skip_steps):\n",
     "    # create a part for chords in midi format\n",
     "    chords_part = stream.Part()\n",
+    "    # Create deep copy of flat melody part\n",
     "    harmonized_part = deepcopy(melody_part)\n",
     "    \n",
-    "    # Clean any previous chord symbols\n",
+    "    # Remove old chord symbols\n",
     "    for el in harmonized_part.recurse().getElementsByClass(harmony.ChordSymbol):\n",
     "        harmonized_part.remove(el)\n",
     "\n",
-    "    prev_mir_chord = None\n",
-    "    # Add new chord symbols based on grid\n",
-    "    for i, mir_chord in enumerate(generated_chords):\n",
-    "        if mir_chord not in (\"<pad>\", \"<nc>\") and mir_chord != prev_mir_chord:\n",
-    "            prev_mir_chord = deepcopy(mir_chord)\n",
-    "            offset = (i + skip_steps) * ql_per_16th\n",
-    "            r, t, _ = mir_eval.chord.encode( mir_chord, reduce_extended_chords=True )\n",
-    "            pcs = r + np.where( t > 0 )[0] + 48\n",
-    "            c = chord.Chord( pcs.tolist() )\n",
-    "            chord_symbol = harmony.chordSymbolFromChord( c )\n",
-    "            harmonized_part.insert(offset, chord_symbol)\n",
+    "    # Track inserted chords\n",
+    "    last_chord_symbol = None\n",
+    "    inserted_chords = {}\n",
     "\n",
-    "    return harmonized_part\n",
+    "    for i, mir_chord in enumerate(generated_chords):\n",
+    "        if mir_chord in (\"<pad>\", \"<nc>\"):\n",
+    "            continue\n",
+    "        if mir_chord == last_chord_symbol:\n",
+    "            continue\n",
+    "\n",
+    "        offset = (i + skip_steps) * ql_per_16th\n",
+    "\n",
+    "        # Decode mir_eval chord symbol to chord symbol object\n",
+    "        try:\n",
+    "            r, t, _ = mir_eval.chord.encode(mir_chord, reduce_extended_chords=True)\n",
+    "            pcs = r + np.where(t > 0)[0] + 48\n",
+    "            c = chord.Chord(pcs.tolist())\n",
+    "            chord_symbol = harmony.chordSymbolFromChord(c)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Skipping invalid chord {mir_chord} at step {i}: {e}\")\n",
+    "            continue\n",
+    "\n",
+    "        # harmonized_part.insert(offset, chord_symbol)\n",
+    "        chords_part.insert(offset, c)\n",
+    "        inserted_chords[i] = chord_symbol\n",
+    "        last_chord_symbol = mir_chord\n",
+    "\n",
+    "    # Convert flat part to one with measures\n",
+    "    harmonized_with_measures = harmonized_part.makeMeasures()\n",
+    "\n",
+    "    # Repeat previous chord at start of bars with no chord\n",
+    "    for m in harmonized_with_measures.getElementsByClass(stream.Measure):\n",
+    "        bar_offset = m.offset\n",
+    "        # has_chord = any(isinstance(el, harmony.ChordSymbol) and el.offset == bar_offset for el in m)\n",
+    "        # has_chord = any( isinstance(el, harmony.ChordSymbol) for el in m )\n",
+    "        has_chord = any(isinstance(el, harmony.ChordSymbol) and el.offset == 0. for el in m)\n",
+    "        if not has_chord:\n",
+    "            # Find previous chord before this measure\n",
+    "            prev_chords = [el for el in harmonized_part.recurse().getElementsByClass(harmony.ChordSymbol)\n",
+    "                           if el.offset < bar_offset]\n",
+    "            if prev_chords:\n",
+    "                prev_chord = prev_chords[-1]\n",
+    "                m.insert(0.0, deepcopy(prev_chord))\n",
+    "    \n",
+    "    # Convert flat part to one with measures\n",
+    "    chords_with_measures = chords_part.makeMeasures()\n",
+    "\n",
+    "    # Repeat previous chord at start of bars with no chord\n",
+    "    for m in chords_with_measures.getElementsByClass(stream.Measure):\n",
+    "        bar_offset = m.offset\n",
+    "        # has_chord = any(isinstance(el, chord.Chord) and el.offset == bar_offset for el in m)\n",
+    "        # has_chord = any( isinstance(el, chord.Chord) for el in m )\n",
+    "        has_chord = any(isinstance(el, chord.Chord) and el.offset == 0. for el in m)\n",
+    "        if not has_chord:\n",
+    "            # Find previous chord before this measure\n",
+    "            prev_chords = [el for el in chords_part.recurse().getElementsByClass(chord.Chord)\n",
+    "                           if el.offset < bar_offset]\n",
+    "            if prev_chords:\n",
+    "                prev_chord = prev_chords[-1]\n",
+    "                m.insert(0.0, deepcopy(prev_chord))\n",
+    "\n",
+    "    # Create final score with chords and melody\n",
+    "    score = stream.Score()\n",
+    "    score.insert(0, harmonized_with_measures)\n",
+    "    score.insert(0, chords_with_measures)\n",
+    "\n",
+    "    return score\n",
     "# end overlay_generated_harmony\n",
     "\n",
-    "def save_harmonized_score(melody_part_with_chords, title=\"Harmonized Piece\", out_path=\"harmonized.xml\"):\n",
-    "    score = stream.Score()\n",
-    "    score.insert(0, melody_part_with_chords)\n",
+    "def save_harmonized_score(score, title=\"Harmonized Piece\", out_path=\"harmonized.xml\"):\n",
     "    score.metadata = metadata.Metadata()\n",
     "    score.metadata.title = title\n",
     "    score.write('musicxml', fp=out_path)\n",
@@ -496,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "id": "99e6d2cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "harmonized_part = overlay_generated_harmony(encoded['melody_part'], output_tokens, encoded['ql_per_quantum'], encoded['skip_steps'])\n",
-    "save_harmonized_score(harmonized_part, out_path=\"harmonized_output.mxl\")\n"
+    "score = overlay_generated_harmony(encoded['melody_part'], output_tokens, encoded['ql_per_quantum'], encoded['skip_steps'])\n",
+    "save_harmonized_score(score, out_path=\"harmonized_output.mxl\")\n"
    ]
   }
  ],
